fix: avoid unwanted scroll on mobile

--- a/src/components/sbb-dialog/sbb-dialog.scss
+++ b/src/components/sbb-dialog/sbb-dialog.scss
@@ -8,6 +8,8 @@
   --sbb-dialog-padding-inline: var(--sbb-spacing-fixed-5x);
   --sbb-dialog-color: var(--sbb-color-black-default);
   --sbb-dialog-background-color: var(--sbb-color-white-default);
+  --sbb-dialog-width: 100%;
+  --sbb-dialog-height: 100%;
   --sbb-dialog-max-width: 100%;
   --sbb-dialog-max-width-default: #{sbb.px-to-rem-build(892)};
   --sbb-dialog-max-height: 100%;
@@ -108,10 +110,10 @@
 .sbb-dialog {
   padding: 0;
   border: none;
+  width: var(--sbb-dialog-width);
+  height: var(--sbb-dialog-height);
   max-width: var(--sbb-dialog-max-width);
   max-height: var(--sbb-dialog-max-height);
-  width: 100%;
-  height: 100%;
   overflow: auto;
   color: var(--sbb-dialog-color);
   background-color: var(--sbb-dialog-background-color);
@@ -130,8 +132,6 @@
   }
 
   :host([data-fullscreen]) & {
-    width: 100%;
-    height: 100%;
     border-radius: 0;
   }
 
@@ -149,13 +149,17 @@
 .sbb-dialog__wrapper {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  width: var(--sbb-dialog-width);
+  height: var(--sbb-dialog-height);
+  max-width: var(--sbb-dialog-max-width);
   max-height: var(--sbb-dialog-max-height);
   outline: none;
-  position: sticky;
-  inset-block-start: 0;
+  position: fixed;
+  word-break: break-word;
 
   @include sbb.mq($from: medium) {
+    position: sticky;
+    inset-block-start: 0;
     height: auto;
   }
 }
@@ -172,7 +176,7 @@
 
   :host([data-fullscreen]) & {
     position: fixed;
-    width: 100%;
+    width: var(--sbb-dialog-width);
     background-color: transparent;
     padding-inline: var(--sbb-spacing-responsive-xs);
     padding-block-start: var(--sbb-spacing-responsive-xs);
